--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/weblogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script>
       (function () {
@@ -23,7 +23,7 @@
       rel="stylesheet"
       href="https://unpkg.com/@blueprintjs/core@5/lib/css/blueprint.css"
     />
-    <title>polotno</title>
+    <title>Studio-AppStorys</title>
   </head>
   <body >
     <div id="root"></div>
